profile: fixed sidebar alignment, skill tags loader was positioned oddly

--- a/client/landing/stylus/app.user.styl
+++ b/client/landing/stylus/app.user.styl
@@ -922,6 +922,8 @@ textarea.profile-handle-customize.kdinput
       .kdscrollview
         height              auto
 
+
+
   .content-display-wrapper
     rel()
     left                    0
@@ -953,6 +955,20 @@ textarea.profile-handle-customize.kdinput
 
       .static-page-link
         margin-left         0px!important
+
+      .profileinfo
+
+        .profilelocation-form
+
+          > p
+            margin-left     0
+
+        .static-page-view
+          margin-left       0
+
+        .kdloader
+          fr()
+
 
 .about-sidebar .static-content
   padding                   10px
